fix for text overflow in comparision results

--- a/src/App.css
+++ b/src/App.css
@@ -74,7 +74,7 @@ td {
 .column-data {
   text-align: left;
   /*font-size: 10px;*/
-  white-space: nowrap;
+  white-space: pre;
 }
 
 .minor-column-heading {
